--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="reset.css">
 </head>
 <body>
+    <!--Header-->
+    <header class="header">
+        <h1>Joshua-Rhymer Bernardo</h1>
+    </header>
+    <!--Navigation Bar-->
+    <ul class="navigation">
+        <li>About</li>
+        <li>Projects </li>
+        <li>Contact</li>
+    </ul>
+
     
 </body>
 </html>
