added project section  and img

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!--Header/navigation-->
     
 <header class="header">
+    <img id="displayPicture" src="Assets/images/Display Picture.jpg">
     <h1>Joshua-Rhymer Bernardo</h1>
 <nav>
     <ul class="navigation">
@@ -27,7 +28,7 @@
 </nav>
 </header>
 <div id="flex">
-    <section class= "aside">
+    <section id= "aside-1">
         <h2>About Me</h2>
     </section>
     <section id= "section-1">
@@ -36,12 +37,19 @@
         I strive to succeed through this course and aim to one day become<br>the I best can be as a full stack developer.
         </p>
     </section>
+    <section id= "aside-2">
+        <h2>Projects</h2>
+    </section>
+    <section class= "section-2-projects">
+        <img id="projectImage" src="Assets/images/Cheatsheet.png" alt="Snippet photo of my CSScheatsheet"></section>
+    </section>
 
 </div>
 
 
 
-<footer></footer>
+<footer>
+</footer>
     
 </body>
 </html>
