index.html and css

--- a/index.html
+++ b/index.html
@@ -40,8 +40,16 @@
     <section id= "aside-2">
         <h2>Projects</h2>
     </section>
-    <section class= "section-2-projects">
-        <img id="projectImage" src="Assets/images/Cheatsheet.png" alt="Snippet photo of my CSScheatsheet"></section>
+    <section id= "flex" class ="section-2-projects">
+        <div> 
+            <img class="projectImage" src="Assets/images/Cheatsheet.png" alt="Snippet photo of my CSScheatsheet"></section>
+        </div> 
+        <div> 
+            <img class="projectImage" src="Assets/images/domains.jpg" alt="Snippet photo of my CSScheatsheet"></section>
+        </div>
+        <div><img class="projectImage" src="Assets/images/charts.jpg" alt="Snippet photo of my CSScheatsheet"></section>
+        </div>            
+       
     </section>
 
 </div>
