--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
         <div> 
             <img class="projectImage" src="Assets/images/domains.jpg" alt="Snippet photo of my CSScheatsheet"></section>
         </div>
-        <div><img class="projectImage" src="Assets/images/charts.jpg" alt="Snippet photo of my CSScheatsheet"></section>
-        </div>            
+        <div>
+            <img class="projectImage" src="Assets/images/charts.jpg" alt="Snippet photo of my CSScheatsheet"></section>
+        </div>            >
        
     </section>
 
