fixed projets section and addded placeholder images

--- a/index.html
+++ b/index.html
@@ -41,15 +41,13 @@
         <h2>Projects</h2>
     </section>
     <section id= "flex" class ="section-2-projects">
-        <div> 
-            <img class="projectImage" src="Assets/images/Cheatsheet.png" alt="Snippet photo of my CSScheatsheet"></section>
-        </div> 
-        <div> 
-            <img class="projectImage" src="Assets/images/domains.jpg" alt="Snippet photo of my CSScheatsheet"></section>
-        </div>
-        <div>
-            <img class="projectImage" src="Assets/images/charts.jpg" alt="Snippet photo of my CSScheatsheet"></section>
-        </div>            >
+       
+        <img class="projectImage" src="Assets/images/Cheatsheet.png" alt="Snippet photo of my CSScheatsheet">
+        <img class="projectImage" src="Assets/images/domains.jpg" alt="Snippet photo of my CSScheatsheet">
+        <img class="projectImage" src="Assets/images/charts.jpg" alt="Snippet photo of my CSScheatsheet">
+        <img class="projectImage" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
+        <img class="projectImage" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
+        <img class="projectImage" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
        
     </section>
 
