--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section id="flex" class="section-2-projects">
 
             <div>
-                <img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
+                <img class="mainProjectImg" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
                 <p class="imageText">CSS Cheat Sheet</p>
             </div>
             <div>
@@ -62,7 +62,7 @@
             </div>
             <div>
                 <img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
-                <p class="imageText">Forms</p>
+                <p class="imageText">Web New (Group Project)</p>
             </div>
             <div>
                 <img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
@@ -70,7 +70,11 @@
             </div>
             <div>
                 <img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
-                <p class="imageText">Tumblr Theme</p>
+                <p class="imageText">Work Day Scheduler</p>
+            </div>
+            <div>
+                <img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
+                <p class="imageText">Weather Dashboard</p>
             </div>
 
         </section>
