set CSS Html and Body height to 100%

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
     <footer class="bottomFooter">
         <div>
             <ul>
-                <li><a href="#">Github</a></li>
-                <li><a href="#">Linkedin</a></li>
+                <li><a href="https://github.com/joshuab96">Github</a></li>
+                <li><a href="https://www.linkedin.com/in/joshua-rhymer-bernardo-6a2b8b200/">Linkedin</a></li>
                 <li><a href="#">Facebook</a></li>
                 <li>
                     <p>Ⓒ Joshua-Rhymer Bernardo</p>
