removed text dec for hyperlinks in images and added group project to projects

--- a/index.html
+++ b/index.html
@@ -49,32 +49,40 @@
         <section id="flex" class="section-2-projects">
 
             <div>
-                <img class="mainProjectImg" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
-                <p class="imageText">CSS Cheat Sheet</p>
+                <a href="https://joshuab96.github.io/Project-1/"><img class="mainProjectImg"
+                        src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
+                    <p class="imageText">Web New (Group Project)</p>
+                </a>
             </div>
             <div>
-                <img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
-                <p class="imageText">Password Generator</p>
+                <a href=><img class="projectImages" src="https://picsum.photos/200"
+                        alt="Snippet photo of my CSScheatsheet">
+                    <p class="imageText">Password Generator</p>
+                </a>
             </div>
             <div>
-                <img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
-                <p class="imageText">Scissors, Paper, Rock</p>
+                <a><img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
+                    <p class="imageText">Scissors, Paper, Rock</p>
+                </a>
             </div>
             <div>
-                <img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
-                <p class="imageText">Web New (Group Project)</p>
+                <a><img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
+                    <p class="imageText">Mini Cheet Sheet</p>
+                </a>
             </div>
             <div>
-                <img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
-                <p class="imageText">Project Tracker</p>
+                <a><img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
+                    <p class="imageText">Project Tracker</p>
+            </div></a>
+            <div>
+                <a><img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
+                    <p class="imageText">Work Day Scheduler</p>
+                </a>
             </div>
             <div>
-                <img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
-                <p class="imageText">Work Day Scheduler</p>
-            </div>
-            <div>
-                <img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
-                <p class="imageText">Weather Dashboard</p>
+                <a><img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
+                    <p class="imageText">Weather Dashboard</p>
+                </a>
             </div>
 
         </section>
