added link for password generator

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 </a>
             </div>
             <div>
-                <a href=><img class="projectImages" src="https://picsum.photos/200"
-                        alt="Snippet photo of my CSScheatsheet">
+                <a href="https://joshuab96.github.io/Password-Generator/"><img class="projectImages"
+                        src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
                     <p class="imageText">Password Generator</p>
                 </a>
             </div>
