added Project img

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <div>
                 <a href="https://joshuab96.github.io/Project-1/"><img class="mainProjectImg"
-                        src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
+                        src="Assets/images/WebNews.png" alt="Group Project 1">
                     <p class="imageText">Web New (Group Project)</p>
                 </a>
             </div>
