improved code for mobile view

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </ul>
         </nav>
     </header>
-    <div id="flex">
+    <div class="flex">
         <section id="aside-1">
             <h2>About Me</h2>
         </section>
@@ -50,7 +50,7 @@
         <section id="aside-2">
             <h2>Projects</h2>
         </section>
-        <section id="flex" class="section-2-projects">
+        <section class="flex section-2-projects">
 
             <div>
                 <a href="https://joshuab96.github.io/Project-1/"><img class="mainProjectImg"
