fixed font sizing for smaller displays

--- a/index.html
+++ b/index.html
@@ -58,32 +58,32 @@
                     <p class="imageText">Web New (Group Project)</p>
                 </a>
             </div>
-            <div>
+            <div class="imgContainer">
                 <a href="https://joshuab96.github.io/Password-Generator/"><img class="projectImages"
                         src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
                     <p class="imageText">Password Generator</p>
                 </a>
             </div>
-            <div>
+            <div class="imgContainer">
                 <a><img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
                     <p class="imageText">Scissors, Paper, Rock</p>
                 </a>
             </div>
-            <div>
+            <div class="imgContainer">
                 <a><img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
                     <p class="imageText">Mini Cheet Sheet</p>
                 </a>
             </div>
-            <div>
+            <div class="imgContainer">
                 <a><img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
                     <p class="imageText">Project Tracker</p>
             </div></a>
-            <div>
+            <div class="imgContainer">
                 <a><img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
                     <p class="imageText">Work Day Scheduler</p>
                 </a>
             </div>
-            <div>
+            <div class="imgContainer">
                 <a><img class="projectImages" src="https://picsum.photos/200" alt="Snippet photo of my CSScheatsheet">
                     <p class="imageText">Weather Dashboard</p>
                 </a>
